@@ -7,6 +7,7 @@
 * Add - Notification badge next to payments menu.
 * Fix - Fixed broken search on transactions list page.
 * Add - More helpful message on checkout errors.
+* Update - Change the default track `recordEvent` to use @woocommerce/tracks.
 
 = 2.2.0 - 2021-03-31 =
 * Fix - Paying with a saved card for a subscription with a free trial will now correctly save the chosen payment method to the order for future renewals.
